<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/current"
        android:textColor="#ff0000"
        android:textSize="12sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/current"
        android:paddingTop="10dip"
        android:text="@string/start"
        android:textColor="#0000ff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/start"
        android:paddingTop="10dip"
        android:text="@string/stop"
        android:textColor="#0000ff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/stop"
        android:paddingTop="10dip"
        android:text="@string/hidden"
        android:textColor="#0000ff"
        android:textSize="14sp" />

</RelativeLayout>